# mini-idp

./: .env.dist  .gitignore  Makefile  README.md  app.py  config-auto-testing.yml  config-conversation-app.yml  config-default.yml  docker-compose.yml  make.ps1  pyproject-poetry.toml  pyproject.toml  requirements.txt  snapshot-for-testing.yml
midp/: __main__.py  config-bootstrap-dev.yml  config.py  log_factory.py  models.py  rds.py  static_info.py  web.py
midp/app/: models.py  web_client.py
midp/common/: base_rest_controller.py  debugging.py  enigma.py  env_helpers.py  key_storage.py  obj_patcher.py  policy_manager.py  rds.py  renderer.py  session_manager.py  token_manager.py  web_helpers.py
midp/configuration/: handlers.py
midp/dao/: atomic.py  client.py  realm.py  role.py  scope.py  user.py
midp/iam/: handlers.py  models.py  realm_rest_controller.py  rest_controller.py  rpc_handlers.py
midp/oauth/: access_evaluator.py  handler.py  models.py  user_authenticator.py
midp/recovery/: handler.py
midp/rest/: data_service.py  handlers.py  realm_rest_controller.py
midp/root/: daos.py  models.py
midp/snapshot/: handler.py  models.py  utils.py
midp/static/: base.css  basic.css  realm_login.js
midp/templates/: oauth_device_activation.html
midp/webui/: asset-manifest.json  (+2 more)
migrations/: 001-init.sql  002-add-system-entities.sql
scripts/: run_test.sh
tests/: .gitignore  test_async_base.py  test_common_enigma.py  test_config.py  test_oauth_client_credentials.py  test_oauth_device_code_flow.py  test_oauth_login.py  test_user_rest_api.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+87 files in other folders)
