[tool.poetry]
name = "mini-idp"
version = "0.1.0"
description = ""
authors = ["Juti Noppornpitak <jnopporn@shiroyuki.com>"]
readme = "README.md"
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">3.9"
cryptography = "^43.0.1"
fastapi = {extras = ["standard"], version = "^0.115.2"}
imagination = "^3.3.2"
Jinja2 = "^3.1.4"
psycopg = "^3.2.3"
PyJWT = {extras = ["crypto"], version = "^2.9.0"}
pyyaml = ">=6.0,<7.0"
requests = "^2.32.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
opentelemetry-instrumentation-fastapi = "^0.48b0"
jsonpatch = "^1.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
