[project]
name = "mini-idp"
version = "0.1.0"
description = "Mini Identity Provider"
authors = [
    { name = "Juti Noppornpitak", email = "jnopporn@shiroyuki.com" }
]
readme = "README.md"
license-files = ['LICENSE']
requires-python = ">=3.13"

dependencies = [
    "cryptography==44.0.1",
    "fastapi[standard]>=0.115.2,<0.116.0",
    "imagination>=3.4.2",
    "Jinja2>=3.1.4,<3.2.0",
    "psycopg>=3.2.3,<3.3.0",
    "PyJWT[crypto]>=2.9.0,<2.10.0",
    "pyyaml>=6.0,<7.0",
    "requests>=2.32.3,<2.33.0",
    "sqlalchemy[asyncio]>=2.0.35,<2.1.0",
    "opentelemetry-instrumentation-fastapi>=0.54b1",
    "jsonpatch>=1.33,<1.34",
]

[project.optional-dependencies]
build = ["setuptools"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["midp*"]
namespaces = false